--- a/React/src/App.css
+++ b/React/src/App.css
@@ -11,7 +11,7 @@ nav {
   margin: 0;
   width: 100%;
   height: 80px;
-  background-color: black;
+  background-image: linear-gradient(to right, black, maroon , red );
   display: flex;
   justify-content: center;
   align-items: center;
@@ -20,7 +20,6 @@ nav {
 }
 
 a {
-  color: white;
   text-decoration: none;
   margin: 10px;
   font-size: 25px;
